2015-07-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* man/Makefile.am (mi_perl5lib_path): Add directories containing 
	XSParagraph files.

2015-07-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac: Retrieve "cc" 
	Perl configuration value.
	* tp/Texinfo/Convert/XSParagraph/Makefile.am: Use it as CC.

2015-07-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/Makefile.am: Change path in -I flag to makeinfo.

2015-07-02  Karl Berry  <karl@freefriends.org>

	* configure.ac (AC_INIT),
	* util/texi2dvi (version): go to 6.0dev since we are past the release.
	* README-hacking: mention it.

2015-07-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac 
	(lookup_perl_flags): Strip any compiler flags that
	aren't -I or -D.
	* tp/Texinfo/Convert/XSParagraph/mylib/xspara.c (hello): Try a
	"en_US.UTF-8" locale.
	* tp/Texinfo/Convert/XSParagraph/lib/XSParagraph.pm: Reduce 
	required Perl version.

2015-07-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/lib/XSParagraph.pm: Rewritten 
	to use DynaLoader module, instead of XSLoader.  Look for a 
	Libtool *.la file and extract the name of the loadable object 
	from it.
	* tp/Texinfo/Convert/XSParagraph/Makefile.am,
	tp/Texinfo/Convert/XSParagraph/configure.ac,
	tp/Texinfo/Convert/XSParagraph/fetch_conf.pl: New files.

	* tp/texi2any.pl (BEGIN) <in source run>, <not in source run>:
	Add directories to look for loadable modules in to @INC.

	* tp/Texinfo/Convert/Plaintext.pm: Uncomment import of 
	XSParagraph (but don't use it yet).

	* configure.ac (AC_CONFIG_SUBDIRS): Configure 
	tp/Texinfo/Convert/XSParagraph.
	* tp/Makefile.am (SUBDIRS): Add Texinfo/Convert/XSParagraph.
	(do_subst): Substitute also for "@pkglibexecdir@" in texi2any.pl.
	* doc/Makefile.am: Pass -I flag to makeinfo to find in-source 
	XSParagraph module.

	* autogen.sh: Run autoreconf in tp/Texinfo/Convert/XSParagraph.
